--- a/projects.html
+++ b/projects.html
@@ -24,10 +24,10 @@
     <ul class="list-nonbullets">
         <li>
             <article class="article section "  >
-                <h1>App For Cafe</h1>
-                <small>Nov 10, 2020</small>
-                <p>Done project over android development on a basic Cafe app . Basic one page UI app for introduction of the Cafe.</p>
-                <a class="primary font align1 " href="https://github.com/Manyaverma/cafe-APP"><small>View Source on Github</small></a>
+                <h1>Ferb Talk</h1>
+                <small>July 10, 2021</small>
+                <p>In childhood Phineas and Ferb were favorite of almost all kids. For me Ferb was favorite so I had made  web app Ferb Latin Translator using HTML+CSS+JS and funtranslations API  Ferb Latin Translator. Have a look !</p>
+                <a class="primary font align1 " href="https://github.com/Manyaverma/Ferb-talk"><small>View Source on Github</small></a>
             </article>
         </li>
         <li>
@@ -36,6 +36,14 @@
                 <small>June 11, 2021</small>
                 <p>A CLI app built with nodeJS. You can send this to your friends and find out who really knows you.</p>
                 <a class="primary font align1 " href="https://github.com/Manyaverma/Assingnment"><small>View Source on Github</small></a>
+            </article>
+        </li>
+        <li>
+            <article class="article section "  >
+                <h1>App For Cafe</h1>
+                <small>Nov 10, 2020</small>
+                <p>Done project over android development on a basic Cafe app . Basic one page UI app for introduction of the Cafe.</p>
+                <a class="primary font align1 " href="https://github.com/Manyaverma/cafe-APP"><small>View Source on Github</small></a>
             </article>
         </li>
     </ul>
