--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     </nav>
     <header class="header">
         <h1 class="header-heading">About <span class="heading-heading2">Me</span></h1>
-        <img class="img img2" src="https://media-exp3.licdn.com/dms/image/C5603AQEArv1748lmNA/profile-displayphoto-shrink_800_800/0/1612885739361?e=1629331200&v=beta&t=pp9A5kIgRIJwiLFFasRKMnGGI8fqVXlEsQvE1BuX2vk" />
+        <img class="img img2" src="https://media-exp1.licdn.com/dms/image/C5603AQEArv1748lmNA/profile-displayphoto-shrink_800_800/0/1612885739361?e=1642032000&v=beta&t=BjR1HKBoSUZNCUmIBEzU6Sjp642p9BhbmPajYfvQ3sE" />
     </header>
 
     <section class="section">
@@ -32,7 +32,7 @@
     <footer class="footer">
         <div class="footer-heading">You can find me on</div>
         <ul class="list-nonbullets">
-            <li class="list-inline"><a class="link2" href="https://www.linkedin.com/in/manya-verma-7436b81b1/">LinkedIn</a></li>
+            <li class="list-inline"><a class="link2" href="https://www.linkedin.com/in/manya-verma/">LinkedIn</a></li>
             <li class="list-inline"><a class="link2"href="https://twitter.com/Manyaverma_">Twitter</a></li>
             <li class="list-inline"><a class="link2"href="https://github.com/Manyaverma">Github</a></li>
         </ul>
