--- a/achievement.html
+++ b/achievement.html
@@ -34,7 +34,7 @@
     <footer class="footer">
         <div class="footer-heading">You can find me on</div>
         <ul class="list-nonbullets ">
-            <li class="list-inline"><a class="link2" href="https://www.linkedin.com/in/manya-verma-7436b81b1/">LinkedIn</a></li>
+            <li class="list-inline"><a class="link2" href="https://www.linkedin.com/in/manya-verma/">LinkedIn</a></li>
             <li class="list-inline"><a class="link2"href="https://twitter.com/Manyaverma_">Twitter</a></li>
             <li class="list-inline"><a class="link2"href="https://github.com/Manyaverma">Github</a></li>
         </ul>
