--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
                 <h1>Ferb Talk</h1>
                 <small>July 10, 2021</small>
                 <p>In childhood Phineas and Ferb were favorite of almost all kids. For me Ferb was favorite so I had made  web app Ferb Latin Translator using HTML+CSS+JS and funtranslations API  Ferb Latin Translator. Have a look !</p>
-                <a class="primary font align1 " href="https://github.com/Manyaverma/Ferb-talk"><small>View Source on Github</small></a>
+                <a class="primary font align1 " href="https://ferb-talk-latin.netlify.app/"><small>Have a look!</small></a>
             </article>
         </li>
         <li>
@@ -44,6 +44,14 @@
                 <small>Nov 10, 2020</small>
                 <p>Done project over android development on a basic Cafe app . Basic one page UI app for introduction of the Cafe.</p>
                 <a class="primary font align1 " href="https://github.com/Manyaverma/cafe-APP"><small>View Source on Github</small></a>
+            </article>
+        </li>
+        <li>
+            <article class="article section2 " >
+                <h1>Travellopedia</h1>
+                <small>Aug 13, 2021</small>
+                <p>"A journey of thousand miles begins with a single step" wisely said by Lao Tzu , Travellopedia is a web app developed using React js, which is a multiple page web app comprising of top spots for travelling in the various continents</p>
+                <a class="primary font align1 " href="https://manya-travellopedia.netlify.app/"><small>Have a look!</small></a>
             </article>
         </li>
     </ul>
